--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Pokemons</string>
+    <string name="screen_splash_advertisement">Here can be your advertisement</string>
 </resources>
