# splash screen on compose

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="dialog_error_title">Some error happened</string>
     <string name="dialog_error_message">Details:</string>
     <string name="no_pokemons">Oooops!\nThere is no pokemons for some reason</string>
+    <string name="screen_splash_logo">splash logo</string>
 </resources>
