--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="dialog_error_message">Details:</string>
     <string name="no_pokemons">Oooops!\nThere is no pokemons for some reason</string>
     <string name="screen_splash_logo">splash logo</string>
+    <string name="screen_filter_defence">Filter by defence</string>
+    <string name="screen_filter_attack">Filter by attack</string>
+    <string name="screen_filter_speed">Filter by speed</string>
+    <string name="screen_pokemons_refresh">Refresh pokemons list</string>
+    <string name="screen_pokemons_icon">Pokemon\'s icon</string>
 </resources>
