--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="screen_pokemons_refresh">Refresh pokemons list</string>
     <string name="screen_pokemons_icon">Pokemon\'s icon</string>
     <string name="fragment_pokemon_picture">Pokemon\'s image</string>
+    <string name="button_back">Back button</string>
 </resources>
